--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>javascript2</title>
-  <script src="./js/data/data.js"></script>
+  <script src="./js/src/index05.js"></script>
 </head>
 <body>
 </body>
